--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap");
-@import "./index.css";
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap");
+@import "./styles/allStyleFiles.scss";
+
 *,
 *::before,
 *::after {
@@ -22,7 +23,8 @@ body,
 input,
 button,
 a {
-  font-family: "Inter", sans-serif;
+  font-family: "Raleway", sans-serif;
+  color: $textC;
 }
 
 @media (prefers-reduced-motion: no-preference) {
