--- a/src/styles/_Products.scss
+++ b/src/styles/_Products.scss
@@ -17,6 +17,7 @@
   padding: 1.4rem;
   cursor: pointer;
   position: relative;
+  transition: box-shadow 0.3s;
   &:hover {
     box-shadow: 0 0.4rem 3.5rem $textL;
   }
