Added Single product page layout and data + styling

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Raleway:wght@200;300;400;500;600&family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@100;300;400;500;700&display=swap");
 @import "./styles/allStyleFiles.scss";
 
 *,
@@ -29,6 +29,11 @@ a {
 .App {
   padding: 10rem;
   padding-top: 0;
+}
+.page-content {
+  margin: 0 auto;
+  padding: 8rem 0 2rem 0;
+  max-width: 120rem;
 }
 @media (prefers-reduced-motion: no-preference) {
   // .App-logo {
