--- a/src/styles/_Navigation.scss
+++ b/src/styles/_Navigation.scss
@@ -11,6 +11,8 @@
   padding: 2.8rem 0;
   justify-content: space-between;
   font-size: 1 6rem;
+  max-width: 120rem;
+  margin: 0 auto;
 }
 .nav {
   text-transform: uppercase;
