--- a/src/styles/_allColors.scss
+++ b/src/styles/_allColors.scss
@@ -1,5 +1,7 @@
 $white: #ffffff;
+$grey: #a6a6a6;
 $cPrimary: #5ece7b;
+$cSecondary: #5ece7b;
 $textC: #1d1f22;
 $textL: #8d8f9a;
 $textLTransparent: #8d8f9a33;
